# ruto-phone-mcp

./: .gitignore  DONATE.md  README.md  README_zh-CN.md  README_zh-TW.md  pyproject.toml  requirements.txt  run_agent_test.py  run_server.py
config-example/: agent.json  phone.json  server.json
skills/微信使用说明书（极简版）/: SKILL.md
src/ruto_phone_mcp/: __init__.py  __main__.py  agent.py  agent_test.py  config_utils.py  phone.py  rutophone.dex  server.py  test.py
