[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruto-phone-mcp"
version = "0.1.0"
description = "A minimal MCP server implemented in Python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "mcp>=1.0.0",
  "Pillow>=10.0.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
ruto-phone-mcp = "ruto_phone_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ruto_phone_mcp"]
